--- a/css/styles.css
+++ b/css/styles.css
@@ -124,12 +124,14 @@ margin-left: auto;
   background-color: rgba(0, 0, 0, 0.1);
 } */
 .menu-container {
+  display: block;
+  flex-direction: column;
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 80px 40px 80px 40px;
+  padding: 80px 0 80px 40px;
   background-color: var(--white-texcolor);
   z-index: 999;
   transform: translateX(100%);
@@ -153,7 +155,7 @@ margin-left: auto;
   padding: 0;
   margin: 0;
   list-style: none;
-  margin-bottom: 284px;
+  /* margin-bottom: 284px; */
 }
 
 .mobile-menu-link {
@@ -207,6 +209,9 @@ display: block;
   align-items: center;
   justify-content: center;
   
+}
+.mobile-menu-contacts{
+  margin-top: auto;
 }
 .mobile-menu-link:hover,
 .mobile-menu-link:focus{
