--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ margin-left: auto;
   background-color: rgba(0, 0, 0, 0.1);
 } */
 .menu-container {
-  display: block;
+  display:flex;
   flex-direction: column;
   position: fixed;
   top: 0;
