--- a/css/styles.css
+++ b/css/styles.css
@@ -119,10 +119,10 @@ margin-left: auto;
   } 
 }
 /* -----Header----- */
-/* .menu-toggle:hover,
+.menu-toggle:hover,
 .menu-toggle:focus {
   background-color: rgba(0, 0, 0, 0.1);
-} */
+}
 .menu-container {
   display:flex;
   flex-direction: column;
@@ -131,7 +131,7 @@ margin-left: auto;
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 80px 0 0 40px;
+  padding: 80px 0 40px 40px;
   background-color: var(--white-texcolor);
   z-index: 999;
   transform: translateX(100%);
